--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="force-rendering" content="webkit" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="referrer" content="no-referrer" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.png" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
